# Multi-Language-MLP-Benchmark

./: .gitignore  CLAUDE.md  README.md  build.sh  mathematical_foundations.md  requirements.txt  run.sh
configs/: base.yaml  local.yaml.example
configs/models/: cnn.yaml  mlp.yaml
docs/plans/: 2026-02-21-rust-mlp-design.md
src/c/: CMakeLists.txt  cnn_main.c  data_loader.c  data_loader.h  main.c
src/c/models/cnn/: CMakeLists.txt  cnn.cu  cnn.h  cnn_cpu.c
src/c/models/mlp/: CMakeLists.txt  mlp.cu  mlp.h  mlp_cpu.c
src/c/nn_ops/: CMakeLists.txt  nn_ops.cu  nn_ops.h
src/c/utils/: CMakeLists.txt  data_loader.c  data_loader.h  nn_ops.cu  nn_ops.h  nn_ops_cpu.c
src/python/: setup.py
src/python/models/cnn/: cnn_numpy.py  cnn_pytorch.py
src/python/models/mlp/: data_utils.py  mlp_numpy.py  mlp_pytorch.py
src/rust/: Cargo.toml
src/rust/cnn-cpu/: Cargo.toml
src/rust/cnn-cuda-cublas/: Cargo.toml
src/rust/cnn-cuda-cublas/src/: kernels.cu
src/rust/cnn-cuda-kernels/: Cargo.toml
src/rust/cnn-cuda-kernels/src/: kernels.cu
src/rust/mlp-common/: Cargo.toml
src/rust/mlp-common/src/: lib.rs
src/rust/mlp-cpu/: Cargo.toml
src/rust/mlp-cpu/src/: main.rs
src/rust/mlp-cuda-cublas/: Cargo.toml  build.rs
src/rust/mlp-cuda-cublas/src/: main.rs
src/rust/mlp-cuda-kernels/: Cargo.toml
src/rust/mlp-cuda-kernels/src/: main.rs
src/rust/models/cnn-cpu/: Cargo.toml
src/rust/models/cnn-cpu/src/: main.rs
src/rust/models/cnn-cuda-cublas/: Cargo.toml  build.rs
src/rust/models/cnn-cuda-cublas/src/: kernels.cu  main.rs
src/rust/models/cnn-cuda-kernels/: Cargo.toml  build.rs
src/rust/models/cnn-cuda-kernels/src/: kernels.cu  main.rs
src/rust/models/mlp-cpu/: Cargo.toml
src/rust/models/mlp-cpu/src/: main.rs
src/rust/models/mlp-cuda-cublas/: Cargo.toml
src/rust/models/mlp-cuda-cublas/src/: kernels.cu  main.rs
src/rust/models/mlp-cuda-kernels/: Cargo.toml  build.rs
src/rust/models/mlp-cuda-kernels/src/: kernels.cu  main.rs
src/rust/nn-common/: Cargo.toml
src/rust/nn-common/src/: lib.rs
src/rust/utils/nn-common/src/: lib.rs
src/scripts/: benchmark.py  config.py  download_datasets.sh  lr_sweep.py  pipeline.py  plotting.py  run_pipeline.sh  tune_benchmark.py  tuning.py
