cmake_minimum_required(VERSION 3.10)

if(USE_CUDA)
    message(STATUS "Building MLP with CUDA support")
    add_library(mlp SHARED mlp.cu)
    target_compile_definitions(mlp PRIVATE USE_CUDA)
    set_target_properties(mlp PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_property(TARGET mlp PROPERTY CUDA_ARCHITECTURES native)

    # Link cuBLAS for batched GEMM operations
    find_library(CUBLAS_LIB cublas HINTS ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES} /usr/local/cuda/lib64)
    if(CUBLAS_LIB)
        target_link_libraries(mlp PUBLIC ${CUBLAS_LIB})
        message(STATUS "  cuBLAS: ${CUBLAS_LIB}")
    else()
        message(FATAL_ERROR "cuBLAS not found — required for CUDA build")
    endif()
else()
    message(STATUS "Building MLP without CUDA support")
    add_library(mlp SHARED mlp_cpu.c)

    find_package(OpenMP)
    if(OPENMP_FOUND)
        target_link_libraries(mlp PUBLIC OpenMP::OpenMP_C)
    endif()

    # Optional BLAS for accelerated GEMM (falls back to OpenMP GEMM if not found)
    find_package(BLAS QUIET)
    if(BLAS_FOUND)
        target_link_libraries(mlp PUBLIC ${BLAS_LIBRARIES})
        target_compile_definitions(mlp PRIVATE USE_BLAS)
        # Try to find cblas.h
        find_path(CBLAS_INCLUDE_DIR cblas.h PATHS /usr/include /usr/include/x86_64-linux-gnu /usr/local/include /opt/OpenBLAS/include)
        if(CBLAS_INCLUDE_DIR)
            target_include_directories(mlp PRIVATE ${CBLAS_INCLUDE_DIR})
        endif()
        message(STATUS "  BLAS: ${BLAS_LIBRARIES}")
    else()
        message(STATUS "  BLAS not found — using OpenMP GEMM fallback")
    endif()

    target_link_libraries(mlp PUBLIC m)
endif()

target_include_directories(mlp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
